...
    <TextView
        android:id="@+id/amountTextView"
        style="@style/AmountTextViewAppearance"
        tools:text="0,00 $"/>

    <EditText
        android:id="@+id/newNotesTextField"
        style="@style/PlainEditTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_label"/>

    <TextView
...

        <Space
            android:layout_width="@dimen/transaction_detail_elements_horizontal_space"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/saveButton"
            style="@style/ActionButtonAppearance"
            android:text="@string/str_save"/>

    </LinearLayout>

    <Space
...
