<resources>
    <string name="app_name">mPOS</string>
    <string name="app_name_extended">Manual Transaction</string>

    <string name="percentage_symbol" translatable="false">&#37;</string>

    <string name="enter_discount_label">Enter discount</string>
    <string name="enter_price_label">Enter price</string>
    <string name="add_note_label">Add Note</string>
    <string name="credit_card_label">Credit Card</string>
    <string name="new_item">New Item</string>
    <string name="new_order">New Order</string>
    <string name="transaction_history">Transaction History</string>
    <string name="new_cart">Start new cart</string>
    <string name="quantity_label">Quantity</string>
    <string name="add_label">Add</string>
    <string name="no_go_back_button_label">No, Go Back</string>
    <string name="yes_cancel_button_label">Yes, Cancel</string>

    <string name="are_you_sure_you_want_to">Are you sure you want to %1$s this transaction?</string>

    <string name="phone_order_button_label">Phone order</string>

    <string name="split_label">Split</string>
    <string name="tender_label">Tender</string>
    <string name="back_label">Back</string>
    <string name="total_label">Total:</string>
    <string name="discount_label">Discount</string>
    <string name="including_tax_label">Including tax:</string>
    <string name="balance_label">Balance:</string>
    <string name="delete_label">Delete</string>
    <string name="note_label">Note</string>
    <string name="next_label">Next</string>
    <string name="cash_label">Cash</string>
    <string name="card_label">Card</string>
    <string name="pay_label">PAY</string>
    <string name="charge_label">Charge</string>
    <string name="success_label">Success</string>
    <string name="failed_label">Failed</string>

    <string name="transaction_complete_label">Transaction Complete</string>

    <string name="select_receipt_option_message">Waiting for customer to select receipt option</string>
    <string name="select_receipt_option_label">Select receipt option</string>
    <string name="print_receipt_label">Print Receipt</string>
    <string name="send_receipt_label">Send Receipt</string>
    <string name="no_receipt_label">No Receipt</string>
    <string name="print_failed_message">Print failed</string>
    <string name="print_completed_message">Print completed</string>

    <string name="security_code_label">Security Code</string>

    <string name="swipe_tap_or_insert_card">Swipe, Tap or Insert Card</string>
    <string name="waiting_for_customer_card">Waiting for Customer to swipe, tap or insert credit card</string>
    <string name="error_reading_card">Error Reading Card</string>
    <string name="please_swipe_again">Please swipe again or manually enter card</string>
    <string name="ready_for_signature_label">Ready for Signature</string>
    <string name="waiting_for_customer_signature">Waiting for customer signature.</string>
    <string name="yy_label">YY</string>
    <string name="mm_label">MM</string>
    <string name="card_declined">Card Declined</string>
    <string name="transaction_cancelled">Transaction Cancelled</string>
    <string name="choose_another_card">Choose An Option for Payment</string>
    <string name="add_note_discount_and_taxes">Add Note, Discount and Taxes</string>

    <string name="enter_amount_received">Enter Amount Received</string>
    <string name="cash_received_label">Cash Received</string>
    <string name="card_received_label">Credit Charged</string>
    <string name="cash_pending_label">Pending Amount</string>
    <string name="cash_tendered">Tendered</string>

    <string name="enter_note_for_transaction_label">Enter your note for this transaction</string>
    <string name="save_note">Save note</string>
    <string name="send_a_receipt">Send a Receipt</string>
    <string name="delivery_method_label">Select Delivery Method</string>
    <string name="sms_receipt_title">SMS Receipt</string>
    <string name="sms_receipt_subtitle">Customer Phone Number</string>
    <string name="email_receipt_title">Email Receipt</string>
    <string name="email_receipt_subtitle">Customer Email Address</string>
    <string name="cancel_refund_button">Cancel refund</string>
    <string name="issue_refund_button">Issue refund</string>
    <string name="refund_label">Refund</string>
    <string name="void_label">Void</string>
    <string name="split_payment_label">Split Payment</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="partial_refund_label">Partial</string>
    <string name="processing_card_label">Processing Card</string>

    <string name="reconcile_confirm_label">Do you want to run reconcile batch process?</string>
    <string name="same_as_received">Same as Received</string>
    <string name="amount_to_pay">Amount to Pay</string>
    <string name="change_due">Change Due:</string>

    <string name="charge_amount">Charge amount</string>
    <string name="split_error_amount">Amount to pay can not exceed remaining balance</string>
    <string name="split_error_cash">Amount to pay can not exceed cash received</string>
    <string name="not_tax_label">NO TAX</string>
    <string name="cash_drawer_status_message">Cash drawer open or disconnected &#8230;</string>
    <string name="quantity_error_label">Quantity need to be greater than zero</string>
    <string name="gratuity_amount_label">Select gratuity amount</string>
    <string name="gratuity_wait_message">Waiting for customer to select gratuity amount</string>
    <string name="button_no_tip_label">No gratuity</string>
    <string name="wait_for_pt">Waiting for payment terminal</string>
    <string name="partial_refund_history_label">Partial Refund</string>
    <string name="upper_history_tx_label">Original Transaction #: </string>
    <string name="lower_history_tx_label">Transaction #  %1$s</string>
    <string name="history_detail_tx_total_tax_label">Including Tax: %1$s</string>
    <string name="history_str_on_date">on %1$s</string>
    <string name="history_card_type_credit">CREDIT</string>
    <string name="history_card_type_debit">DEBIT</string>
    <string name="history_car_exp_date">EXP. </string>
    <string name="history_cash_refunded">REFUNDED</string>
    <string name="history_ready_to_void_label">Ready to Void Transaction</string>
    <string name="history_waiting_for_selection_label">Waiting for selection</string>
    <string name="history_header_voided_label">Voided</string>
    <string name="history_void_process_label">Processing void, please wait</string>
    <string name="history_refund_type_label">Refund Type</string>
    <string name="history_select_refund_type_label">Select Refund Type</string>


    <!--PaymentByCard string values -->
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_expiration_label">Expiration</string>
    <string name="credit_card_holder">Card Holder</string>
    <string name="credit_auth_code">Auth Code</string>

     <string name="starting_transaction">New transaction</string> 
    <string name="cancel_transaction_btn">Cancel Transaction</string>

    <string name="str_no">NO</string>
    <string name="str_yes">YES</string>
    <string name="str_change_payment_type">CHANGE PAYMENT TYPE</string>
    <string name="str_ten_percent">10 %</string>
    <string name="str_eighteen_percent">18 %</string>
    <string name="str_twenty_five_percent">25 %</string>
    <string name="str_number_one">1</string>
    <string name="str_card_encrypted_value">**** **** ****</string>
    <string name="str_card_expiration_date">XX/XX</string>
    <string name="str_card_auth_code">XXXXXX</string>

    <string name="str_select_payment_method">Select Payment Method</string>

    <string name="str_save">SAVE</string>
    <string name="str_sales_tax_percent">Sales Tax %1$s</string>
    <string name="str_taxes">Taxes</string>
    <string name="str_print">PRINT</string>
    <string name="str_restaurant">Restaurant?</string>
    <string name="str_is_restaurant">Is restaurant?</string>

    <string name="str_reconcile">reconcile</string>

    <string name="str_label_email">EMAIL</string>
    <string name="str_label_sms">SMS</string>
    <string name="str_enter_amount_to_charge">Enter amount to Charge</string>
    <string name="str_label_remove">Remove</string>
    <string name="str_description">Description</string>
    <string name="str_modifier">modifier</string>
    <string name="str_cardholder">CardHolder</string>
    <string name="str_new_item">New Item</string>

    <string name="str_discount_value">Discount: -%1$s</string>
    <string name="str_tax_value">Tax: %1$s</string>
    <string name="str_quantity_value">QUANTITY:  %1$s</string>
    <string name="str_sales_tax">Sales Tax  %1$s</string>
    <string name="adjusting_basket">Adjusting basket…</string>

    <string name="end_order">End Order</string>
    <string name="basket_adjustment">Basket adjustment</string>
    <string name="rejected_label">REJECTED</string>
    <string name="void_declined_label">Void Declined</string>
    <string name="refund_declined_label">Refund Declined</string>
    <string name="refund_performing">Performing REFUND</string>
    <string name="void_performing">Performing VOID</string>

    <string name="not_available">n/a</string>
    <string name="loading_history">Loading history</string>
    <string name="title_ending_session">Ending session</string>
    <string name="title_making_payment">Making Payment</string>
    <string name="title_finishing_order">Finishing order</string>
    <string name="title_closing_session">Closing session</string>

    <string name="change_ip">Change terminal IP (%1$s)</string>
    <string name="terminalIpTitle">Terminal IP address</string>
    <string name="title_payment_seesion_error">Payment session error</string>
    <string name="message_payment_session_failed">Can not start new payment session. Please check IP address or kill Payment Service, then try again.</string>
    <string name="title_payment_cancelled">Payment canceled</string>
    <string name="message_payment_cancelled">Payment cancelled by user. Try again, choose another payment method or cancel transaction.</string>
    <string name="title_payment_failure">Payment failure</string>
    <string name="title_payment_declined">Payment declined</string>
    <string name="message_payment_declined">Payment declined. Try again, check card, choose another payment method or cancel transaction.</string>
    <string name="edit_port_hint">Port (optional)</string>
    <string name="caption_menu_last_sync">Last sync: %1$s</string>
    <string name="title_reconcile_in_progress">Performing reconcile batch process…</string>
    <string name="title_reconcile_successful">Reconcile batch process success!</string>
    <string name="title_reconcile_failed">Reconcile batch process failed! %1$s</string>
    <string name="never">never</string>
    <string name="receipt_unavailable_message">Original receipt unavailable</string>
    <string name="discount_grater_amount_message">Discount can\'t be greater than amount for item</string>
    <string name="display_name">Display name %1$d</string>
    <string name="changed_message">Changed!</string>
    <string name="item_is_status_pattern">%1$s is: %2$s</string>


    <string name="skuHint">Enter SKU</string>
    <string name="upcHint">Enter UPC</string>
    <string name="upcLabel">UPC</string>
    <string name="skuLabel">SKU</string>

    <!--Keyboard values-->
    <string name="keyboard_btn_1" translatable="false">1</string>
    <string name="keyboard_btn_2" translatable="false">2</string>
    <string name="keyboard_btn_3" translatable="false">3</string>
    <string name="keyboard_btn_4" translatable="false">4</string>
    <string name="keyboard_btn_5" translatable="false">5</string>
    <string name="keyboard_btn_6" translatable="false">6</string>
    <string name="keyboard_btn_7" translatable="false">7</string>
    <string name="keyboard_btn_8" translatable="false">8</string>
    <string name="keyboard_btn_9" translatable="false">9</string>
    <string name="keyboard_btn_0" translatable="false">0</string>
    <string name="keyboard_btn_00" translatable="false">00</string>

    <string name="keyboard_btn_10" translatable="false">10</string>
    <string name="keyboard_btn_20" translatable="false">20</string>
    <string name="keyboard_btn_50" translatable="false">50</string>
    <string name="keyboard_btn_100" translatable="false">100</string>

    <string name="keyboard_btn_del">Del</string>

</resources>
