...
        <Space
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonNoCancel"
            android:layout_width="214dp"
            android:layout_height="62dp"
            android:background="@color/azure"
            android:text="@string/str_no"
            android:textColor="@android:color/white"
            android:textSize="18sp"
...
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:foregroundGravity="center_vertical|center_horizontal" />

        <Button
            android:id="@+id/buttonProccedToCancel"
            android:layout_width="214dp"
            android:layout_height="62dp"
            android:background="@color/azure"
            android:text="@string/str_yes"
            android:textColor="@android:color/white"
            android:textSize="18sp"
...
