...
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18.5sp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="Roboto-Bold"
            android:foregroundGravity="center_vertical"
            tools:text="button"
            android:textColor="@color/azure"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_right"
            style="?android:attr/buttonBarButtonStyle"
...
